--- a/button.html
+++ b/button.html
@@ -30,4 +30,8 @@
             </style>
       </head>
       <BODY>
+          <button class="button1">=verde</button>
+          <button class="button2">=azul</button>
+      </BODY>
+</html>
 
